--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,15 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data
+              android:host="dev-jjrbfhx5.us.auth0.com"
+              android:pathPrefix="/android/${applicationId}/callback"
+              android:scheme="${applicationId}" />
+        </intent-filter>
       </activity>
     </application>
 </manifest>
