--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "expo": "^41.0.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-auth0": "^2.8.3"
+    "react-native-auth0": "^2.8.3",
+    "react-native-config": "^1.4.2",
+    "react-native-device-info": "^8.1.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-restart": "^0.0.22",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.2.0",
+    "react-native-sensitive-info": "^6.0.0-alpha.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
