Fixed some navigation issues

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,8 @@ target 'Clowdr' do
 
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'ClowdrTests' do
     inherit! :complete
     # Pods for testing
