--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-auth0": "^2.8.3",
+    "react-native-big-calendar": "^1.0.2",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "^8.1.3",
     "react-native-gesture-handler": "^1.10.3",
