--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-big-calendar": "^1.0.2",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "^8.1.3",
+    "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.2.0",
