Login logout fixed with new access token

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 AUTH0_DOMAIN="dev-jjrbfhx5.us.auth0.com"
 AUTH0_CLIENT_ID="CdIkhbvmgD4KlQgWmSyqiemdQAbOiP6Z"
-AUTHO_SCOPE="openid offline_access profile email"
-AUTH0_AUDIENCE="https://dev-jjrbfhx5.us.auth0.com/userinfo"
+HASURA_URL="http://7f0c7d65241e.ngrok.io/v1/graphql"
