--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "^41.0.1",
+    "graphql": "^15.5.0",
+    "jwt-decode": "^2.2.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-auth0": "^2.8.3",
