--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 AUTH0_DOMAIN="dev-jjrbfhx5.us.auth0.com"
 AUTH0_CLIENT_ID="CdIkhbvmgD4KlQgWmSyqiemdQAbOiP6Z"
-HASURA_URL="http://7f0c7d65241e.ngrok.io/v1/graphql"
+HASURA_URL="https://7f0c7d65241e.ngrok.io/v1/graphql"
+HASURA_ADMIN_SECRET="XXXXX"
