--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-screens": "^3.2.0",
     "react-native-sensitive-info": "^6.0.0-alpha.9",
     "react-native-ui-lib": "^5.27.0",
+    "react-native-video": "^5.1.1",
+    "react-native-webview": "^11.6.5",
     "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
