--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native-big-calendar": "^1.0.2",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "^8.1.3",
+    "react-native-elements": "^3.4.2",
     "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-search-bar": "^3.5.1",
     "react-native-sensitive-info": "^6.0.0-alpha.9",
     "react-native-ui-lib": "^5.27.0",
     "react-native-video": "^5.1.1",
