--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ AUTH0_DOMAIN="dev-jjrbfhx5.us.auth0.com"
 AUTH0_CLIENT_ID="CdIkhbvmgD4KlQgWmSyqiemdQAbOiP6Z"
 HASURA_URL="https://rnauth.ngrok.io/v1/graphql"
 HASURA_ADMIN_SECRET="XXXXX"
+WEBSOCKET_SERVER_URL="http://localhost:3002"
