--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "react-native-ui-lib": "^5.27.0",
     "react-native-video": "^5.1.1",
     "react-native-webview": "^11.6.5",
-    "tinycolor2": "^1.4.2"
+    "socket.io-client": "^4.1.3",
+    "tinycolor2": "^1.4.2",
+    "util": "^0.12.4",
+    "uuidv4": "^6.2.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
